--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,7 @@
           <% if (!msg.errors) { %>
           <div class="field is-grouped">
             <div class="control">
-              <button class="button is-link" type="Submit">Submit</button>
+              <button class="button is-link" type="Submit">Add Review</button>
             </div>
           </div>
           <%}%>
